# spotlight

./: .gitignore  README.md
code/: README.md
code/Benchmarks/: evaluation.py
code/Benchmarks/benchmark 1/gender_change/: gender_bias_functions.py  synthetic_data_generation.py
code/Benchmarks/benchmark 1/llm_outputs/: llm_functions.py
code/Benchmarks/benchmark 2/: README.md  llm_outputs_config.json  style_transfer.py
code/Benchmarks/benchmark 3/: generate_reviews.py  llama_flip_sentiment.py  make_json.py  wordnet_flip_sentiment.py
code/Token pattern methods/: c_tfidf.py  gpt4.py  premise.py  requirement.txt
code/Token pattern methods/llama/: experimental_pipeline.py  llm_functions.py  run_experiment.py
code/Token pattern methods/llama/config/: config_generation_gender_bias.py
code/User study/: README.md  pyproject.toml  requirement.txt
code/User study/userstudy/: __init__.py  experiment_contents.py  schema.sql  study.py
code/User study/userstudy/static/: style.css
code/User study/userstudy/templates/: base.html  error.html
code/User study/userstudy/templates/study/: demographics.html  end.html  instruction0.html  instruction1.html  start.html  submission_step.html
data/: README.md
data/1. Benchmarks/Benchmark 1/Data/: gender_bias_100_0.6_ratio.json  gender_bias_100_0.7_ratio.json  gender_bias_100_0.8_ratio.json  gender_bias_100_0.9_ratio.json  gender_bias_10_0.8_ratio.json  (+4 more)
data/4. User Study/: README.md  user-study_results_setting1-doctor_labeled.xlsx  user-study_results_setting2-farming_labeled.xlsx  user-study_results_training_labeled.xlsx
(+169 files in other folders)
