[project]
name = "userstudy"
version = "1.0.2"
description = "test"
maintainers = [{name = "Anonymized", email = "anonymized"}]
classifiers = ["Private :: Do Not Upload"]
dependencies = [
    "flask",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "premise2userstudy"

[tool.ruff]
src = ["src"]